--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "prettier": "^2.1.2",
     "rollup": "^2.28.2",
     "rollup-plugin-terser": "^7.0.2"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
