--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "version": "0.0.1",
   "description": "A very tiny js in-memory database, using native JavaScript objects",
   "main": "dist/cjs/index.js",
+  "types": "types/index.d.ts",
   "module": "dist/esm/index.js",
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
+    "tsd": "tsd",
     "prepare": "rollup --config",
     "coveralls": "jest --coverage && cat ./coverage/lcov.info | coveralls"
   },
   "files": [
     "dist/cjs/*",
     "dist/esm/*",
-    "dist/umd/*"
+    "dist/umd/*",
+    "types/index.d.ts"
   ],
   "repository": {
     "type": "git",
@@ -40,7 +43,8 @@
     "jest": "^26.4.2",
     "prettier": "^2.1.2",
     "rollup": "^2.28.2",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "tsd": "^0.13.1"
   },
   "publishConfig": {
     "access": "public"
