--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jest": "^26.4.2",
     "prettier": "^2.1.2",
     "rollup": "^2.28.2",
+    "rollup-plugin-ignore": "^1.0.10",
     "rollup-plugin-terser": "^7.0.2",
     "tsd": "^0.13.1"
   },
